--- a/Uom.csproj
+++ b/Uom.csproj
@@ -1,30 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
+    <Product>UoM</Product>
+    <Description>Units of measurement library</Description>
+    <Authors>Petroware AS</Authors>
+    <Copyright>Copyright © Petroware AS. All rights reserved.</Copyright>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Uom</AssemblyName>
-    <ApplicationIcon />
     <OutputType>Library</OutputType>
-    <StartupObject />
     <RootNamespace>Uom</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="src\**" />
-    <Compile Remove="lib\**" />
-    <EmbeddedResource Remove="src\**" />
-    <EmbeddedResource Remove="lib\**" />
     <None Remove="src\**" />
     <None Remove="lib\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove=".gitignore" />
     <None Remove="LICENSE" />
     <None Remove="README.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <EmbeddedResource Include="Petroware\Uom\display_symbols.txt">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
